trying to fix responsive overflow-y for mobile screens

--- a/app/assets/stylesheets/components/_custom.scss
+++ b/app/assets/stylesheets/components/_custom.scss
@@ -80,7 +80,7 @@ nav li a:hover {
   color: #bbb;
 }
 
-section {
+#home,#projects,#about,#contact {
   height: 100vh;
   display: flex;
   justify-content: center;
